Solved issue where menu was overlapping text in s8 and s5 * Added code that add a class then clicked to hero-text-box * Added class hero-text-box-none to css

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -245,6 +245,11 @@ header {
 	-webkit-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
 }
+
+.hero-text-box-none {
+	display: none;
+}
+
 .hero-text-box .dash{
 	font-size: 60%;
 	color: #6c6c6c;
